--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@ title: Abbazia di Nonantola
   <nav>
     <h3>Sections:</h3>
     <ul>
-      <li><a href="topic.md">Topic</a></li>
-      <li><a href="methodology.md">Methodology</a></li>
-      <li><a href="sparql.md">SPARQL & Results</a></li>
-      <li><a href="gaps.md">Identifying Gaps</a></li>
-      <li><a href="prompts.md">LLM Prompts</a></li>
-      <li><a href="rdf.md">RDF Triples</a></li>
-      <li><a href="challenges.md">Challenges</a></li>
-      <li><a href="conclusion.md">Conclusion</a></li>
+      <li><a href="topic.html">Topic</a></li>
+      <li><a href="methodology.html">Methodology</a></li>
+      <li><a href="sparql.html">SPARQL & Results</a></li>
+      <li><a href="gaps.html">Identifying Gaps</a></li>
+      <li><a href="prompts.html">LLM Prompts</a></li>
+      <li><a href="rdf.html">RDF Triples</a></li>
+      <li><a href="challenges.html">Challenges</a></li>
+      <li><a href="conclusion.html">Conclusion</a></li>
     </ul>
   </nav>
 
