--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ title: Abbazia di Nonantola
     </ul>
   </nav>
 
+  <img src="nonantola.png" alt="Abbazia di Nonantola" style="width:600px; border-radius:10px; margin-top:20px;">
+
   <main>
     <section>
       <h2>Introduction</h2>
