--- a/index.html
+++ b/index.html
@@ -42,14 +42,32 @@ title: Abbazia di Nonantola
 
     <section>
       <h2>Our Team</h2>
-      <p>This project was collaboratively developed by:</p>
-      <ul>
-        <li><strong>Alice Montorsi</strong></li>
-        <li><strong>Giulia Manenti</strong></li>
-        <li><strong>Giulia Marani</strong></li>
-        <li><strong>Matilde Ciarrocchi</strong></li>
-      </ul>
-      <p>All team members contributed to data analysis, SPARQL design, LLM prompting, and final website production.</p>
+<p>This project was collaboratively developed by:</p>
+
+<div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin-top: 20px;">
+  
+  <div style="text-align: center;">
+    <img src=alice.jpg" alt="Alice Montorsi" style="width: 120px; border-radius: 50%;">
+    <p><strong>Alice Montorsi</strong></p>
+  </div>
+
+  <div style="text-align: center;">
+    <img src=giulia-manenti.jpg" alt="Giulia Manenti" style="width: 120px; border-radius: 50%;">
+    <p><strong>Giulia Manenti</strong></p>
+  </div>
+
+  <div style="text-align: center;">
+    <img src=giulia-marani.jpg" alt="Giulia Marani" style="width: 120px; border-radius: 50%;">
+    <p><strong>Giulia Marani</strong></p>
+  </div>
+
+  <div style="text-align: center;">
+    <img src=matilde.jpg" alt="Matilde Ciarrocchi" style="width: 120px; border-radius: 50%;">
+    <p><strong>Matilde Ciarrocchi</strong></p>
+  </div>
+
+</div>
+
     </section>
   </main>
 
