--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@ title: Abbazia di Nonantola
 <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin-top: 20px;">
   
   <div style="text-align: center;">
-    <img src=alice.jpg" alt="Alice Montorsi" style="width: 120px; border-radius: 50%;">
+    <img src="alice.jpg" alt="Alice Montorsi" style="width: 120px; border-radius: 50%;">
     <p><strong>Alice Montorsi</strong></p>
   </div>
 
   <div style="text-align: center;">
-    <img src=giulia-manenti.jpg" alt="Giulia Manenti" style="width: 120px; border-radius: 50%;">
+    <img src="giulia-manenti.jpg" alt="Giulia Manenti" style="width: 120px; border-radius: 50%;">
     <p><strong>Giulia Manenti</strong></p>
   </div>
 
   <div style="text-align: center;">
-    <img src=giulia-marani.jpg" alt="Giulia Marani" style="width: 120px; border-radius: 50%;">
+    <img src="giulia-marani.jpg" alt="Giulia Marani" style="width: 120px; border-radius: 50%;">
     <p><strong>Giulia Marani</strong></p>
   </div>
 
   <div style="text-align: center;">
-    <img src=matilde.jpg" alt="Matilde Ciarrocchi" style="width: 120px; border-radius: 50%;">
+    <img src="matilde.jpg" alt="Matilde Ciarrocchi" style="width: 120px; border-radius: 50%;">
     <p><strong>Matilde Ciarrocchi</strong></p>
   </div>
 
