--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ title: Abbazia di Nonantola
     <section>
       <h2>Introduction</h2>
       <p>
-        This project was developed within the framework of the KE4H (Knowledge Engineering for the Humanities) course at the University of Bologna. 
+        This project was developed within the framework of the KE4H (Knowledge Engineering for the Humanities) course at the <a href="https://www.unibo.it/en" target="_blank">University of Bologna</a>
+. 
         Our goal was to explore how the combination of SPARQL queries and Large Language Models (LLMs) can enrich an existing cultural heritage knowledge graph with new, meaningful content.
       </p>
       <p>
