--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ title: Abbazia di Nonantola
         Our goal was to explore how the combination of SPARQL queries and Large Language Models (LLMs) can enrich an existing cultural heritage knowledge graph with new, meaningful content.
       </p>
       <p>
-        We chose to focus on the <strong>Abbazia di Nonantola</strong>, a monumental Benedictine abbey in the province of Modena, which holds remarkable historical, religious, and artistic value. 
+        We chose to focus on the <strong>Abbazia di Nonantola</strong>, a monumental Benedictine abbey in the <a href="https://en.wikipedia.org/wiki/Province_of_Modena" target="_blank">Province of Modena</a>
+, which holds remarkable historical, religious, and artistic value. 
         Despite its relevance, it is still underrepresented in structured knowledge graphs, which makes it a perfect candidate for enrichment through semantic technologies and AI-powered language models.
       </p>
       <p>
