--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@ title: Abbazia di Nonantola
       </p>
     </section>
 
+    <section id="tools" style="margin-top: 50px;">
+  <h2>Tools</h2>
+  <ul>
+    <li><strong>ArCo:</strong> <a href="http://wit.istc.cnr.it/arco/" target="_blank">http://wit.istc.cnr.it/arco/</a></li>
+    <li><strong>ArCo SPARQL endpoint:</strong> <a href="https://dati.cultura.gov.it/sparql" target="_blank">https://dati.cultura.gov.it/sparql</a></li>
+    <li><strong>Gemini:</strong> <a href="https://gemini.google.com/?hl=it" target="_blank">https://gemini.google.com/?hl=it</a></li>
+    <li><strong>ChatGPT:</strong> <a href="https://chat.openai.com/" target="_blank">https://chat.openai.com/</a></li>
+  </ul>
+</section>
+
     <section>
       <h2>Our Team</h2>
 <p>This project was collaboratively developed by:</p>
