--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@ title: Abbazia di Nonantola
       </p>
     </section>
 
-    <section id="tools" style="margin-top: 50px;">
+   <section id="tools" style="margin-top: 50px;">
   <h2>Tools</h2>
   <ul>
-    <li><strong>ArCo:</strong> <a href="http://wit.istc.cnr.it/arco/" target="_blank">http://wit.istc.cnr.it/arco/</a></li>
-    <li><strong>ArCo SPARQL endpoint:</strong> <a href="https://dati.cultura.gov.it/sparql" target="_blank">https://dati.cultura.gov.it/sparql</a></li>
-    <li><strong>Gemini:</strong> <a href="https://gemini.google.com/?hl=it" target="_blank">https://gemini.google.com/?hl=it</a></li>
-    <li><strong>ChatGPT:</strong> <a href="https://chat.openai.com/" target="_blank">https://chat.openai.com/</a></li>
+    <li><a href="http://wit.istc.cnr.it/arco/" target="_blank"><strong>ArCo</strong></a></li>
+    <li><a href="https://dati.cultura.gov.it/sparql" target="_blank"><strong>ArCo SPARQL endpoint</strong></a></li>
+    <li><a href="https://gemini.google.com/?hl=it" target="_blank"><strong>Gemini</strong></a></li>
+    <li><a href="https://chat.openai.com/" target="_blank"><strong>ChatGPT</strong></a></li>
   </ul>
 </section>
 
