--- a/index.html
+++ b/index.html
@@ -86,5 +86,10 @@ title: Abbazia di Nonantola
   <footer>
     <p>© 2025 KE4H Project – University of Bologna</p>
   </footer>
+  <hr>
+<div style="display: flex; justify-content: flex-end; margin-top: 2em;">
+  <a href="topic.html">Next →</a>
+</div>
 </body>
 </html>
+
