--- a/index.html
+++ b/index.html
@@ -6,47 +6,6 @@ title: Abbazia di Nonantola
 <!DOCTYPE html>
 <html lang="en">
   
-<style>
-  .hero {
-    background-image: url('nonantola.png');
-    background-size: cover;
-    background-position: center;
-    height: 280px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    text-shadow: 1px 1px 4px #000;
-    border-radius: 10px;
-    margin-bottom: 30px;
-  }
-
-  .hero h1 {
-    font-size: 2.7em;
-    margin: 0;
-  }
-
-  .hero p {
-    font-size: 1.1em;
-    margin-top: 8px;
-  }
-
-  .hero a {
-    margin-top: 15px;
-    padding: 8px 16px;
-    border-radius: 6px;
-    background-color: rgba(0,0,0,0.4);
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-  }
-
-  .hero a:hover {
-    background-color: rgba(0,0,0,0.6);
-  }
-</style>
-
   <nav>
     <h3>Sections:</h3>
     <ul>
@@ -60,11 +19,9 @@ title: Abbazia di Nonantola
       <li><a href="conclusion.html">✅ Conclusion</a></li>
     </ul>
   </nav>
-<div class="hero">
-  <h1>Abbazia di Nonantola</h1>
-  <p>A hidden treasure in the province of Modena</p>
-  <a href="https://github.com/giuliamar02/newproject" target="_blank">View on GitHub</a>
 </div>
+
+  <img src="nonantola.png" alt="Abbazia di Nonantola" style="width:600px; border-radius:10px; margin-top:20px;">
 
   <main>
     <section>
